Space invaders not working on small devides: display none till i fix it

--- a/src/components/NotFoundPage/style.css
+++ b/src/components/NotFoundPage/style.css
@@ -56,3 +56,9 @@
   color: var(--orange);
   scale: 1.1;
 }
+
+@media (max-width: 600px) {
+  .space-invaders-link {
+    display: none !important;
+  }
+}
